--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,11 @@
   "license": "MIT",
   "dependencies": {
     "react": "^15.1.0",
-    "react-dom": "^15.1.0"
+    "react-dom": "^15.1.0",
+    "react-redux": "^4.4.5",
+    "redux": "^3.5.2",
+    "redux-logger": "^2.6.1",
+    "redux-thunk": "^2.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^6.3.6",
@@ -26,6 +30,7 @@
     "node-sass": "^3.8.0",
     "postcss-loader": "^0.9.1",
     "react-transform-hmr": "^1.0.4",
+    "redux-devtools": "^3.3.1",
     "sass-loader": "^4.0.0",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.1"
