Add signInUser feature on the client side

--- a/client/.babelrc
+++ b/client/.babelrc
@@ -8,7 +8,7 @@
          "imports": ["react"],
          "locals": ["module"]
        }]
-     }]]
+     }], ["transform-object-rest-spread"]]
     }
   }
 }
