--- a/client/package.json
+++ b/client/package.json
@@ -11,10 +11,13 @@
   "author": "Ken Hibino",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.12.0",
+    "babel-plugin-transform-object-rest-spread": "^6.8.0",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
     "react-redux": "^4.4.5",
     "react-router": "^2.5.1",
+    "react-router-redux": "^4.0.5",
     "redux": "^3.5.2",
     "redux-form": "^5.2.5",
     "redux-logger": "^2.6.1",
@@ -26,6 +29,7 @@
     "babel-eslint": "^6.1.0",
     "babel-loader": "^6.2.4",
     "babel-plugin-react-transform": "^2.0.2",
+    "babel-plugin-transform-object-rest-spread": "^6.8.0",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
     "css-loader": "^0.23.1",
