--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^0.12.0",
     "babel-plugin-transform-object-rest-spread": "^6.8.0",
+    "classnames": "^2.2.5",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
     "react-redux": "^4.4.5",
